chore: remove hacky fix that breaks in dark mode

--- a/packages/storybook/src/templates/globals.css
+++ b/packages/storybook/src/templates/globals.css
@@ -111,10 +111,6 @@
   z-index: 1;
 }
 
-.rhc-card-as-link-no-link:hover {
-  background-color: white !important;
-}
-
 .rhc-card-as-link.rhc-card-as-link--full-bleed .rhc-card-as-link__heading h3,
 .rhc-card-as-link.rhc-card-as-link--horizontal .rhc-card-as-link__heading h3 {
   color: inherit;
